fixed the vertical align

--- a/schmodel-registration-frontend/src/app/pages/apply-for-jobs/apply-for-jobs.component.scss
+++ b/schmodel-registration-frontend/src/app/pages/apply-for-jobs/apply-for-jobs.component.scss
@@ -68,7 +68,7 @@ p {
 }
 
 .row.role_bg {
-    margin: 1px 0px 0px 0px;
+    margin: 10px 0px 0px 0px;
 }
 
 .col-md-12.role-title-style {
